--- a/pom.xml
+++ b/pom.xml
@@ -1,246 +1,240 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>codehall</groupId>
-	<artifactId>codehall</artifactId>
-	<version>1.0.0-Alpha-1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+    <groupId>codehall</groupId>
+    <artifactId>codehall</artifactId>
+    <version>1.0.0-Alpha-1-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-	<name>CodeHall Maven Parent</name>
-	<description>Maven parent for this enterprises' projects</description>
-	<url>https://github.com/codehall/maven-parent</url>
+    <name>CodeHall Maven Parent</name>
+    <description>Maven parent for this enterprises' projects</description>
+    <url>https://github.com/codehall/maven-parent</url>
 
-	<organization>
-		<name>CodeHall</name>
-		<url>http://codehall.github.io</url>
-	</organization>
+    <organization>
+        <name>CodeHall</name>
+        <url>http://codehall.github.io</url>
+    </organization>
 
-	<developers>
-		<developer>
-			<id>alexandreogrodovski</id>
-			<name>Alexandre Ogrodovski</name>
-			<email>alexandreogrodovski@gmail.com</email>
-			<organization>CodeHall</organization>
-			<organizationUrl>http://codehall.github.io</organizationUrl>
-			<roles>
-				<role>developer</role>
-			</roles>
-			<timezone>-3</timezone>
-		</developer>
-	</developers>
+    <developers>
+        <developer>
+            <id>alexandreogrodovski</id>
+            <name>Alexandre Ogrodovski</name>
+            <email>alexandreogrodovski@gmail.com</email>
+            <organization>CodeHall</organization>
+            <organizationUrl>http://codehall.github.io</organizationUrl>
+            <roles>
+                <role>developer</role>
+            </roles>
+            <timezone>-3</timezone>
+        </developer>
+    </developers>
 
-	<distributionManagement>
-		<repository>
-			<id>company-repository</id>
-			<name>Repository for releases</name>
-			<url>${repo.address.release}</url>
-		</repository>
-		<snapshotRepository>
-			<id>company-repository</id>
-			<name>Repository for snapshots</name>
-			<url>${repo.address.snapshot}</url>
-		</snapshotRepository>
-	</distributionManagement>
+    <distributionManagement>
+        <repository>
+            <id>company-repository</id>
+            <name>Repository for releases</name>
+            <url>${repo.address.release}</url>
+        </repository>
+        <snapshotRepository>
+            <id>company-repository</id>
+            <name>Repository for snapshots</name>
+            <url>${repo.address.snapshot}</url>
+        </snapshotRepository>
+    </distributionManagement>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<maven.minversion>3.0.4</maven.minversion>
+        <maven.minversion>3.0.4</maven.minversion>
 
-		<maven.plugin.version.clean>2.6.1</maven.plugin.version.clean>
-		<maven.plugin.version.install>2.5.2</maven.plugin.version.install>
-		<maven.plugin.version.site>3.4</maven.plugin.version.site>
-		<maven.plugin.version.deploy>2.8.2</maven.plugin.version.deploy>
-		<maven.plugin.version.dependency>2.9</maven.plugin.version.dependency>
-		<maven.plugin.version.enforcer>1.3.1</maven.plugin.version.enforcer>
-		<maven.plugin.version.compiler>3.2</maven.plugin.version.compiler>
-		<maven.plugin.version.surefire>2.18</maven.plugin.version.surefire>
-		<maven.plugin.version.jar>2.5</maven.plugin.version.jar>
-		<maven.plugin.version.resources>2.7</maven.plugin.version.resources>
-		<maven.plugin.version.ejb>2.4</maven.plugin.version.ejb>
-		<maven.plugin.version.war>2.5</maven.plugin.version.war>
-		<maven.plugin.version.wildfly>1.0.2.Final</maven.plugin.version.wildfly>
+        <maven.plugin.version.clean>2.6.1</maven.plugin.version.clean>
+        <maven.plugin.version.install>2.5.2</maven.plugin.version.install>
+        <maven.plugin.version.site>3.4</maven.plugin.version.site>
+        <maven.plugin.version.deploy>2.8.2</maven.plugin.version.deploy>
+        <maven.plugin.version.dependency>2.9</maven.plugin.version.dependency>
+        <maven.plugin.version.enforcer>1.3.1</maven.plugin.version.enforcer>
+        <maven.plugin.version.compiler>3.2</maven.plugin.version.compiler>
+        <maven.plugin.version.surefire>2.18</maven.plugin.version.surefire>
+        <maven.plugin.version.jar>2.5</maven.plugin.version.jar>
+        <maven.plugin.version.resources>2.7</maven.plugin.version.resources>
+        <maven.plugin.version.ejb>2.4</maven.plugin.version.ejb>
+        <maven.plugin.version.war>2.5</maven.plugin.version.war>
+        <maven.plugin.version.help>2.2</maven.plugin.version.help>
+        <maven.plugin.version.wildfly>1.0.2.Final</maven.plugin.version.wildfly>
 
-		<appserver.port.development>9990</appserver.port.development>
-		<appserver.port.staging>9990</appserver.port.staging>
-		<appserver.port.production>9990</appserver.port.production>
-		<appserver.host.staging>127.0.0.1</appserver.host.staging>
-		<appserver.host.production>127.0.0.1</appserver.host.production>
-		<appserver.version>8.1.0.Final</appserver.version>
+        <appserver.port.development>9990</appserver.port.development>
+        <appserver.port.staging>9990</appserver.port.staging>
+        <appserver.port.production>9990</appserver.port.production>
+        <appserver.host.staging>127.0.0.1</appserver.host.staging>
+        <appserver.host.production>127.0.0.1</appserver.host.production>
+        <appserver.version>8.2.0.Final</appserver.version>
+        <appserver.bom.version>8.2.1.Final</appserver.bom.version>
 
-		<repo.address.snapshot>http://localhost</repo.address.snapshot>
-		<repo.address.release>http://localhost</repo.address.release>
-	</properties>
+        <repo.address.snapshot>http://localhost</repo.address.snapshot>
+        <repo.address.release>http://localhost</repo.address.release>
+    </properties>
 
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<artifactId>maven-clean-plugin</artifactId>
-					<version>${maven.plugin.version.clean}</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-install-plugin</artifactId>
-					<version>${maven.plugin.version.install}</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-site-plugin</artifactId>
-					<version>${maven.plugin.version.site}</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-deploy-plugin</artifactId>
-					<version>${maven.plugin.version.deploy}</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-dependency-plugin</artifactId>
-					<version>${maven.plugin.version.dependency}</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-enforcer-plugin</artifactId>
-					<version>${maven.plugin.version.enforcer}</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>${maven.plugin.version.compiler}</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>${maven.plugin.version.surefire}</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-jar-plugin</artifactId>
-					<version>${maven.plugin.version.jar}</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>${maven.plugin.version.resources}</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-ejb-plugin</artifactId>
-					<version>${maven.plugin.version.ejb}</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-war-plugin</artifactId>
-					<version>${maven.plugin.version.war}</version>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>${maven.plugin.version.clean}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>${maven.plugin.version.install}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>${maven.plugin.version.site}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>${maven.plugin.version.deploy}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${maven.plugin.version.dependency}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>${maven.plugin.version.enforcer}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven.plugin.version.compiler}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.plugin.version.surefire}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${maven.plugin.version.jar}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>${maven.plugin.version.resources}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-ejb-plugin</artifactId>
+                    <version>${maven.plugin.version.ejb}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>${maven.plugin.version.war}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-help-plugin</artifactId>
+                    <version>${maven.plugin.version.help}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
-	<profiles>
-		<profile>
-			<id>secure-build</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-dependency-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>show-dependency-tree</id>
-								<phase>validate</phase>
-								<goals>
-									<goal>tree</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>analyze-duplicate-dependencies</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>analyze-duplicate</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<artifactId>maven-enforcer-plugin</artifactId>
-						<configuration>
-							<failFast>true</failFast>
-						</configuration>
-						<executions>
-							<execution>
-								<id>verify-environment</id>
-								<phase>validate</phase>
-								<goals>
-									<goal>enforce</goal>
-								</goals>
-								<configuration>
-									<rules>
-										<requireMavenVersion>
-											<version>${maven.minversion}</version>
-										</requireMavenVersion>
-									</rules>
-								</configuration>
-							</execution>
-							<execution>
-								<id>enforce-build-stability</id>
-								<phase>validate</phase>
-								<goals>
-									<goal>enforce</goal>
-								</goals>
-								<configuration>
-									<rules>
-										<requireProperty>
-											<property>project.build.sourceEncoding</property>
-										</requireProperty>
-										<requirePluginVersions>
-											<message>Best Practice is to always define plugin versions!</message>
-										</requirePluginVersions>
-									</rules>
-								</configuration>
-							</execution>
-							<execution>
-								<id>verify-dependencies</id>
-								<phase>validate</phase>
-								<goals>
-									<goal>enforce</goal>
-								</goals>
-								<configuration>
-									<rules>
-										<requireReleaseDeps>
-											<message>This RELEASE depends on SNAPSHOT dependencies!</message>
-											<onlyWhenRelease>true</onlyWhenRelease>
-										</requireReleaseDeps>
-										<requireUpperBoundDeps />
-										<DependencyConvergence />
-									</rules>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
+    <profiles>
+        <profile>
+            <id>secure-build</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-help-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>show-profiles</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>all-profiles</goal>
+                                    <goal>active-profiles</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>show-dependency-tree</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>tree</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>analyze-duplicate-dependencies</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>analyze-duplicate</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                        <configuration>
+                            <failFast>true</failFast>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>verify-environment</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>enforce</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <requireMavenVersion>
+                                            <version>${maven.minversion}</version>
+                                        </requireMavenVersion>
+                                    </rules>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>enforce-build-stability</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>enforce</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <requireProperty>
+                                            <property>project.build.sourceEncoding</property>
+                                        </requireProperty>
+                                        <requirePluginVersions>
+                                            <message>Best Practice is to always define plugin versions!</message>
+                                        </requirePluginVersions>
+                                    </rules>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>verify-dependencies</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>enforce</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <requireReleaseDeps>
+                                            <message>This RELEASE depends on SNAPSHOT dependencies!</message>
+                                            <onlyWhenRelease>true</onlyWhenRelease>
+                                        </requireReleaseDeps>
+                                        <requireUpperBoundDeps/>
+                                        <DependencyConvergence/>
+                                    </rules>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
 
-		<profile>
-			<id>validate-dependencies</id>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-dependency-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>dependency-status</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>analyze-dep-mgt</goal>
-									<goal>analyze-only</goal>
-								</goals>
-								<configuration>
-									<failOnWarning>true</failOnWarning>
-									<failBuild>true</failBuild>
-									<ignoreDirect>false</ignoreDirect>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+    </profiles>
 
 </project>
