--- a/pom.xml
+++ b/pom.xml
@@ -27,36 +27,21 @@
         <repository>
             <id>company-repository</id>
             <name>Repository for releases</name>
-            <url>${repo.address.release}</url>
+            <url>${repo.release.address}</url>
         </repository>
         <snapshotRepository>
             <id>company-repository</id>
             <name>Repository for snapshots</name>
-            <url>${repo.address.snapshot}</url>
+            <url>${repo.snapshot.address}</url>
         </snapshotRepository>
     </distributionManagement>
 
     <properties>
-        <appserver.version>8.2.0.Final</appserver.version>
+        <appserver.version>8.2.1.Final</appserver.version>
         <appserver.bom.version>8.2.1.Final</appserver.bom.version>
-        <repo.address.snapshot>http://localhost</repo.address.snapshot>
-        <repo.address.release>http://localhost</repo.address.release>
+        <repo.snapshot.address>http://localhost</repo.snapshot.address>
+        <repo.release.address>http://localhost</repo.release.address>
     </properties>
-
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.wildfly.plugins</groupId>
-                    <artifactId>wildfly-maven-plugin</artifactId>
-                    <configuration>
-                        <hostname>${appserver.host}</hostname>
-                        <port>${appserver.port}</port>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
 
     <profiles>
 
@@ -69,9 +54,22 @@
                 </property>
             </activation>
             <properties>
-                <appserver.host>http://localhost</appserver.host>
-                <appserver.port>9990</appserver.port>
+                <appserver.dev.port>9990</appserver.dev.port>
             </properties>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.wildfly.plugins</groupId>
+                            <artifactId>wildfly-maven-plugin</artifactId>
+                            <configuration>
+                                <hostname>http://localhost</hostname>
+                                <port>${appserver.dev.port}</port>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
         </profile>
 
         <profile>
@@ -82,10 +80,20 @@
                     <value>web.staging</value>
                 </property>
             </activation>
-            <properties>
-                <appserver.host>http://localhost</appserver.host>
-                <appserver.port>9990</appserver.port>
-            </properties>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.wildfly.plugins</groupId>
+                            <artifactId>wildfly-maven-plugin</artifactId>
+                            <configuration>
+                                <hostname>http://localhost</hostname>
+                                <port>9991</port>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
         </profile>
 
         <profile>
@@ -96,10 +104,20 @@
                     <value>web.production</value>
                 </property>
             </activation>
-            <properties>
-                <appserver.host>http://localhost</appserver.host>
-                <appserver.port>9990</appserver.port>
-            </properties>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.wildfly.plugins</groupId>
+                            <artifactId>wildfly-maven-plugin</artifactId>
+                            <configuration>
+                                <hostname>http://localhost</hostname>
+                                <port>9992</port>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
         </profile>
 
     </profiles>
